Basic native code invocation skeleton